# modbus-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SchneiderWifi.md  configuration.yaml  hubs.md  node-red-flows.json  pyproject.toml  readser.py  requirements.txt  script.py
mbe/: __init__.py  __main__.py  cli.py  cli_config.py  cli_mtr.py  cli_rly.py  cli_tai.py  io.py  make_client.py  readser.py  schneider.py  script.py  taidecent.py  waveshare_relays.py
