[project]
name = "mbe"
authors = [{name = "Andrew Schweitzer", email = "schweitz72@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

dependencies = [
  "pydantic",
  "pymodbus",
  "pyserial",
  "rich",
  "typer",
  "xdg",
]

[project.scripts]
mbe = "mbe.cli:app"