[tool.poetry]
name = "mbe"
version = "0.1.1"
description = "Code for experiments with modbus"
authors = ["Andrew Schweitzer <schweitz72@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
mbe = "mbe.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pymodbus = "^3.6.9"
pyserial = "^3.5"
rich = "^13.7.1"
typer = "^0.12.3"
xdg = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
pre-commit-hooks = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "serial",
]
ignore_missing_imports = true
